--- a/requirements.txt
+++ b/requirements.txt
@@ -18,24 +18,24 @@ Flask-Moment==0.11.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 guess-language-spirit==0.5.3
+gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.11.2
 Mako==1.0.7
 MarkupSafe==1.1.1
+psycopg2==2.8.6
 PyJWT==1.5.3
 python-dateutil==2.6.1
 python-dotenv==0.15.0
 python-editor==1.0.3
 pytz==2017.2
+redis==3.5.3
 requests==2.25.1
+rq==1.8.0
 six==1.11.0
 SQLAlchemy==1.3.22
 urllib3==1.26.2
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.1
-
-# requirements for Heroku
-# psycopg2==2.7.3.1
-# gunicorn==19.7.1
